<resources>
    <string name="app_name">Hangman</string>
    <string name="title">Hangman</string>
    <string name="title_activity_game">Game</string>
    <string name="check_button">Check!</string>
    <string name="type_in_letters">Type in the letter you want to check.</string>
    <string name="points">POINTS</string>
    <string name="save_score">Save your score!</string>
    <string name="your_name">Your name</string>
    <string name="single_player">Single player</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="stats">Stats</string>

    <string name="enter_word">Enter the word</string>
    <string name="multiplayer_button">Play!</string>
</resources>
