<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:id="@+id/linearLayout"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/single_player"
            android:onClick="startSinglePlayerGame"
            android:id="@+id/button2"
            android:layout_margin="10px"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiplayer"
            android:onClick="startMultiplayerGame"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10px" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats"
            android:id="@+id/button"
            android:layout_alignStart="@+id/linearLayout"
            android:layout_margin="10px"
            android:layout_gravity="center_horizontal"
            android:onClick="showStats"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:textSize="30dp"
        android:textColor="@color/blue_main" />

</RelativeLayout>
