<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marta.hangman.GameActivity"
    android:id="@+id/mainLayout">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:id="@+id/imageView"
        android:src="@drawable/game_over"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:weightSum="1"
        android:id="@+id/layoutAddLetter"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true">


        <Button
            android:layout_width="40dp"
            android:layout_height="fill_parent"
            android:text="@string/save_score"
            android:id="@+id/button4"
            android:layout_weight="0.81"
            />

        <EditText
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:id="@+id/inputLetter"
            android:layout_marginLeft="20dp"
            android:textSize="12dp"
            android:textAlignment="center"
            android:hint="@string/your_name"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignBottom="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:id="@+id/letters">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=" "
            android:id="@+id/score1"
            android:textSize="40dp"
            android:layout_marginRight="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/points"
            android:id="@+id/score2"
            android:textSize="40dp"
            android:layout_marginRight="5dp"
            android:layout_below="@+id/imageView"
            android:layout_alignEnd="@+id/layoutAddLetter" />


    </LinearLayout>


</RelativeLayout>
